#1 - Github trending repositories of Android in Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         rxandroid_version = "2.1.0"
         android_test_version = "1.0.2"
         android_expresso_version = "3.0.2"
+        kotlin_version = '1.2.71'
     }
 
     repositories {
@@ -24,6 +25,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0-alpha01'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
