--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -34,6 +37,10 @@ dependencies {
     implementation "com.android.support:design:$material_version"
     implementation "com.android.support:cardview-v7:$material_version"
 
+    /* Kotlin Support */
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+
     /* Android Architecture Component - ConstraintLayout  */
     implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
 
@@ -52,7 +59,7 @@ dependencies {
 
     /* Android Architecture Component - Room Persistence Lib  */
     implementation "android.arch.persistence.room:runtime:$room_version"
-    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    kapt "android.arch.persistence.room:compiler:$room_version"
     /* - RxJava support for Room  */
     implementation "android.arch.persistence.room:rxjava2:$room_version"
 
@@ -62,8 +69,8 @@ dependencies {
     /* Dagger2  */
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     /* Mokito  */
     testImplementation "org.mockito:mockito-core:$mockito_version"
