Added MainActivity to AndroidManifest.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,12 @@
 
 
         <activity
-            android:name=".ui.activity.GithubListActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:exported="true"
-            android:name=".ui.activity.GithubDetailActivity"
-            android:configChanges="orientation|screenSize" />
     </application>
 </manifest>
